--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
         
         .content {
             position: relative;
+            padding-top: 150px;
             z-index: 1;
             width: 100%;
             max-width: 1200px;
